[package]
name = "jwt-cracker-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
jsonwebtoken = "8.0.1"
base64 = "0.13.0"
tokio = { version = "1.20.0", features = ["full"] }
futures = "0.3"
hmac = "0.12.1"
sha2 = "0.10.6"
num-bigint = "0.4.0"
serde_json = "1.0"
hex = "0.4"
